--- a/package.json
+++ b/package.json
@@ -13,17 +13,27 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint:css": "stylelint './src/**/*.[js|jsx]'"
   },
   "dependencies": {
+    "bootstrap": "^4.1.1",
+    "jest": "^23.1.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-scripts": "1.1.4",
+    "reactstrap": "^6.1.0",
     "styled-components": "^3.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-flow": "^6.23.0",
-    "flow-bin": "^0.74.0"
+    "flow-bin": "^0.74.0",
+    "jest-styled-components": "^5.0.1",
+    "react-test-renderer": "^16.4.0",
+    "stylelint": "^9.2.1",
+    "stylelint-config-recommended": "^2.1.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.3.1"
   }
 }
